# project-TryGuessNumber

./: CMakeLists.txt  MyGame  README.md  build_project.sh  main.cpp  my_game
Build_Project/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_gamelibrary  test_playerdata  test_processing
Build_Project/Testing/Temporary/: CTestCostData.txt
data_fetching/: main  main.cpp
data_fetching/include/: player_data.h
data_fetching/output/: player_data
data_fetching/src/: main.cpp  player_data.cpp  player_data.h
data_library/include/: game_library.h  random.h
data_library/src/: game_library.cpp  game_library.h  random.cpp  random.h
data_processing/include/: game.h
data_processing/src/: game.cpp
test/test_data_fetching/: CMakeLists.txt  test_player_data.cpp
test/test_data_processing/: CMakeLists.txt  test_processing.cpp
test/test_game_library/: CMakeLists.txt  test-game-library.cpp  test-random.cpp  test_library.cpp  test_random.cpp
